--- a/SplittyMobile/package.json
+++ b/SplittyMobile/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-camera": "^1.1.4"
+    "react-native-camera": "^1.1.4",
+    "react-navigation": "^2.9.1"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
