--- a/SplittyMobile/package.json
+++ b/SplittyMobile/package.json
@@ -10,6 +10,7 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-camera": "^1.1.4",
+    "react-native-image-base64": "^0.1.3",
     "react-navigation": "^2.9.1"
   },
   "devDependencies": {
